--- a/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/SummeryView.cshtml
@@ -53,5 +53,6 @@
 		</tbody>
 	</table>
 	<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2FHolidai-386395071914370%2F%3Fmodal%3Dadmin_todo_tour&layout=button_count&size=large&mobile_iframe=false&appId=431422607399723&width=84&height=28" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-	<button type="button" class="btn btn-info" id="ok-order">OK</button>
+	<br>
+    <button type="button" class="btn btn-info" id="ok-order">Order More</button>
 </div>
