--- a/FinalWebApp/FinalWebApp/wwwroot/css/site.css
+++ b/FinalWebApp/FinalWebApp/wwwroot/css/site.css
@@ -41,8 +41,9 @@ for details on configuring this project to bundle and minify static web assets. 
 .filter {
     position: fixed;
     background-color: white;
-    padding-left: 1rem;
-    padding-bottom:2rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    box-shadow: grey 0px 0px 14px 0px;
 }
 
 #filter {
@@ -114,6 +115,17 @@ body {
 .logo{
     
 }
+.filter-tag {
+    background: transparent;
+    border: transparent;
+    color: blue;
+    text-decoration: underline;
+}
+
+.filter-tag:hover{
+    color:Highlight;
+}
+
 
 .headline{
     margin-top:10rem;
@@ -227,8 +239,6 @@ label{
 .hotel-result-list li {
     background-color: whitesmoke;
     padding-top: 1.5rem;
-    border: groove;
-    border-color: aqua;
     margin-bottom: .5rem;
 }
 
@@ -263,7 +273,8 @@ label{
 
 .hotel-result {
     overflow: hidden;
-    border-radius: .8rem;
+    border-radius: 2rem;
+    box-shadow: grey 0px 0px 14px 0px;
 }
 
 .footer-link:hover {
