--- a/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 <body class="font">
     <nav class="navbar navbar-expand-lg fixed-top">
         <a asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/images/Logos/logo.png" class="logo col-md-2" />
+            <img src="~/images/Logos/logo.png" class="img-responsive logo col-md-2" />
         </a>
         <div class="hello-user col-md-3">
             @if (Globals.getConnectedUser(Context.Session) != null)
