--- a/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
@@ -2,12 +2,12 @@
 	ViewData["Title"] = "About";
 }
 <div class="container text-center">
-    <h2>@ViewData["Title"]</h2>
-    <h3>@ViewData["Message"]</h3>
+    <h2></h2>
+    <h3></h3>
 
-    <p>Use this area to provide additional information.</p>
+    
 
-    <video width="400" height="280" controls autoplay>
+    <video height="400" style="margin-top:5rem" controls autoplay muted>
         <source src="~/images/HotelsImages/video.mp4" type="video/mp4">
     </video>
 </div>
