Add "hello user" by email Display hotels name in order's summery Improve ML class Add search to the edit users

--- a/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Users/Index.cshtml
@@ -7,6 +7,11 @@
 <p>
     <a asp-action="Create" class="btn btn-info">+</a>
 </p>
+<div class="col-centered">
+	<form action="/users/index" id="search-user"></form>
+	<input placeholder="filter by name" name="userName" type="text" form="search-user"/>
+	<button class="btn btn-info" type="submit" form="search-user" hidden>search</button>
+</div>
 <table class="table table-info table-striped">
     <thead class="thead-light">
         <tr>
