--- a/FinalWebApp/FinalWebApp/Views/Orders/Details.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/Details.cshtml
@@ -9,16 +9,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Hotel)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Hotel.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CheckInDate)
