--- a/FinalWebApp/FinalWebApp/Views/Orders/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Orders/Index.cshtml
@@ -14,10 +14,7 @@
     <thead class="thead-light">
         <tr>
             <th scope="col">
-                @Html.DisplayNameFor(model => model.HotelId)
-            </th>
-            <th scope="col">
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Hotel)
             </th>
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Email)
@@ -36,10 +33,7 @@
         {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.HotelId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Hotel.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
