Add join to show all cities in country Add search by hotel name to edit Add section and header

--- a/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     <a asp-action="Create" class="btn btn-info">+</a>
 </p>
+
+<div class="col-centered">
+	<form action="/countries/index" id="All-cities"></form>
+	<input placeholder="Search all cities in country" name="countryName" type="text" form="All-cities"/>
+	<button class="btn btn-info" type="submit" form="All-cities" hidden>Search all cities in the country</button>
+</div>
+
 <table class="table table-info table-striped">
     <thead class="thead-light">
         <tr>
