--- a/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Home/About.cshtml
@@ -2,12 +2,13 @@
 	ViewData["Title"] = "About";
 }
 <div class="container text-center">
-    <h2></h2>
-    <h3></h3>
-
-    
-
-    <video height="400" style="margin-top:5rem" controls autoplay muted>
-        <source src="~/images/HotelsImages/video.mp4" type="video/mp4">
-    </video>
+	<section>
+		<header>
+			<h2>It's time for a good holiday </h2>
+			<h3>We are here to help you find the perfect vacation!</h3>
+		</header>
+		<video height="400" style="margin-top:5rem" controls autoplay muted>
+			<source src="~/images/HotelsImages/video.mp4" type="video/mp4">
+		</video>
+</section>
 </div>
