--- a/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/Results.cshtml
@@ -128,7 +128,7 @@
 
             <div class="no-results">
                 <h4>
-                    no results found for  '@text'
+                    Sorry! Try another search...
                 </h4>
             </div>
         }
