--- a/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Search/OfferView.cshtml
@@ -19,7 +19,7 @@
 <div class="container ">
     <div class="offer">
         <div class="container row">
-            <div class="col-md-9">
+            <div class="col-md-6">
                 <h1>
                     @Model.Name
                 </h1>
@@ -28,67 +28,76 @@
                 </h4>
             </div>
             <div class="col-md-3">
-                <button onclick="goBack()" class="input btn btn-danger back-button">back</button>
+                <h4>
+                    Price: <span class="price">@Model.Price $</span>
+                </h4>
+                <h6>
+                    Check-in: @Model.Checkin.ToString("dd/MM/yy").Replace(" ", "/")
+                    <br />
+                    Check-out: @Model.Checkout.ToString("dd/MM/yy").Replace(" ", "/")
+                </h6>
+            </div>
+            <div class="col-md-3">
                 <input class="input btn btn-warning order-now-button" type="submit" value="Order now" form="orderNow" />
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 hotel-image">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block ">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div class="order-button">
-
-                    <form action="/Orders/Confirm" method="post" id="orderNow">
-                        <input name="CheckInDate" value="@Model.Checkin" hidden form="orderNow" />
-                        <input name="CheckOutDate" value="@Model.Checkout" hidden form="orderNow" />
-                        <input name="isAi" value="@Model.isAiSearch.ToString()" hidden form="orderNow" />
-                        <input value="@Model.userAge" name="userAge" form="orderNow" hidden />
-                        <input value="@Model.userGender" name="userGender" form="orderNow" hidden />
-                        <input value="@Model.userFamilyStatus" name="userFamilyStatus" form="orderNow" hidden />
-                        <input value="@Model.userHobby" name="userHobby" form="orderNow" hidden />
-                        <input value="@Model.userPurpose" name="userPurpose" form="orderNow" hidden />
-                        <input name="HotelId" value="@Model.Id" hidden form="orderNow" />
-                    </form>
-                </div>
             </div>
-
-            <div class="col-md-4">
-                <div class="mapouter">
-                    <div class="gmap_canvas">
-                        <iframe id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%"></iframe>
+            <div class="row">
+                <div class="col-md-4 hotel-image">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="~/images/HotelsImages/@Model.Id/image1.jpg" class="d-block ">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="~/images/HotelsImages/@Model.Id/image2.jpg" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="~/images/HotelsImages/@Model.Id/image3.jpg" class="d-block w-100">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <div class="order-button">
+                        <button onclick="goBack()" class="input btn btn-danger back-button">back</button>
+                        <form action="/Orders/Confirm" method="post" id="orderNow">
+                            <input name="CheckInDate" value="@Model.Checkin" hidden form="orderNow" />
+                            <input name="CheckOutDate" value="@Model.Checkout" hidden form="orderNow" />
+                            <input name="isAi" value="@Model.isAiSearch.ToString()" hidden form="orderNow" />
+                            <input value="@Model.userAge" name="userAge" form="orderNow" hidden />
+                            <input value="@Model.userGender" name="userGender" form="orderNow" hidden />
+                            <input value="@Model.userFamilyStatus" name="userFamilyStatus" form="orderNow" hidden />
+                            <input value="@Model.userHobby" name="userHobby" form="orderNow" hidden />
+                            <input value="@Model.userPurpose" name="userPurpose" form="orderNow" hidden />
+                            <input name="HotelId" value="@Model.Id" hidden form="orderNow" />
+                        </form>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4">
-                <script type='text/javascript' src='https://darksky.net/widget/default/@ViewBag.coords/uk12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=uk&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
+                <div class="col-md-4">
+                    <div class="mapouter">
+                        <div class="gmap_canvas">
+                            <iframe id="gmap_canvas" src=@ViewBag.mapAddress frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="100%" height="100%"></iframe>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <script type='text/javascript' src='https://darksky.net/widget/default/@ViewBag.coords/uk12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=uk&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
+                </div>
             </div>
         </div>
-    </div>
 </div>
 
 <script>
