--- a/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/_ViewFeatures.cshtml
@@ -13,7 +13,7 @@
     </environment>
 </head>
 <body>
-    <table>
+    <table style="margin: auto">
         <tbody>
             <tr>
                 <td>
