--- a/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
+++ b/FinalWebApp/FinalWebApp/Views/Countries/Index.cshtml
@@ -11,7 +11,7 @@
 </p>
 
 <div class="col-centered">
-	<form action="/countries/index" id="All-cities"></form>
+	<form action="/countries/SearchCities" id="All-cities"></form>
 	<input placeholder="Search all cities in country" name="countryName" type="text" form="All-cities"/>
 	<button class="btn btn-info" type="submit" form="All-cities" hidden>Search all cities in the country</button>
 </div>
